--- a/homework02.1/package.json
+++ b/homework02.1/package.json
@@ -2,7 +2,7 @@
   "name": "homework02.1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Fuhrer13/goit-react-hw-02-feedback.git",
+  "homepage": "https://fuhrer13.github.io/goit-react-hw-02-feedback/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
